# MediaFactory

./: .gitignore  README.md  build.gradle  config.gradle  dependence.gradle  external_config.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ggg/mediafactory/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ggg/: MainApplication.kt
app/src/main/java/com/ggg/enter/activity/: MainActivity.kt
app/src/main/java/com/ggg/enter/model/: DataBean.kt  EnterRepository.kt
app/src/main/java/com/ggg/image/activity/: ImageActivity.kt
app/src/main/java/com/ggg/imagecolor/activity/: ImageColorActivity.kt
app/src/main/java/com/ggg/mediafactory/: MainActivity.kt
app/src/main/java/com/ggg/mediafactory/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/com/ggg/video/activity/: VideoActivity.kt
app/src/main/java/com/ggg/video/player/: VideoPlayer.kt
app/src/main/java/com/ggg/video/viewmodel/: VideoSourceViewModel.kt
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: string.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ggg/mediafactory/: ExampleUnitTest.kt
base/: build.gradle
base/src/androidTest/java/com/ggg/base/: ExampleInstrumentedTest.kt
base/src/main/: AndroidManifest.xml
base/src/main/java/com/ggg/base/: BaseApplication.kt  MainApplication.kt
base/src/main/java/com/ggg/base/plugin_interface/: IPluginObserver.kt
base/src/main/java/com/ggg/base/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
base/src/main/res/values/: themes.xml
base/src/test/java/com/ggg/base/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
handler/: build.gradle  ffmpeg_build.sh
handler/src/androidTest/java/com/ggg/handler/: ExampleInstrumentedTest.kt
handler/src/main/: AndroidManifest.xml
handler/src/main/cpp/: CMakeLists.txt  handler.cpp  handler.h  note.md
handler/src/main/cpp/arm64-v8a/include/libavutil/: ffversion.h
handler/src/main/cpp/commons/: log.h
handler/src/main/cpp/image/: image_handler.cpp  image_handler.h
handler/src/main/cpp/include/libavutil/: imgutils.h
handler/src/main/cpp/video/: video_dealer.cpp  video_dealer.h  video_handler.cpp  video_handler.h
handler/src/main/java/com/ggg/handler/: NativeLib.kt  natives.kt
handler/src/main/java/com/ggg/handler/image/activity/: ImageActivity.kt
handler/src/main/java/com/ggg/handler/video/activity/: RecordActivity.kt  VideoActivity.kt
handler/src/main/java/com/ggg/handler/video/player/: VideoPlayer.kt
handler/src/main/java/com/ggg/handler/video/viewmodel/: RecordViewModel.kt  VideoSourceViewModel.kt
handler/src/main/res/values/: strings.xml
handler/src/test/java/com/ggg/handler/: ExampleUnitTest.kt
handler/x264/x264/: android_build.sh
logutils/: build.gradle
logutils/src/androidTest/java/com/ggg/logutils/: ExampleInstrumentedTest.kt
logutils/src/main/: AndroidManifest.xml
logutils/src/main/cpp/: CMakeLists.txt  log_utils.cpp
logutils/src/main/cpp/write_file/: WriteFileManager.cpp  WriteFileManager.h
logutils/src/test/java/com/ggg/logutils/: ExampleUnitTest.kt
plugins_loader/: build.gradle
plugins_loader/src/androidTest/java/com/ggg/plugins_loader/: ExampleInstrumentedTest.kt
plugins_loader/src/main/: AndroidManifest.xml
plugins_loader/src/main/java/com/ggg/plugins_loader/: PluginActivity.kt  PluginsLoader.kt
plugins_loader/src/main/java/com/ggg/plugins_loader/plugins/: TestPluginLoader.kt
plugins_loader/src/test/java/com/ggg/plugins_loader/: ExampleUnitTest.kt
plugins_test/: build.gradle
plugins_test/src/androidTest/java/com/ggg/plugins_test/: ExampleInstrumentedTest.kt
plugins_test/src/main/: AndroidManifest.xml
plugins_test/src/main/java/com/ggg/plugins_test/: TestActivity.kt  TestFragment.kt  TestJFragment.java
plugins_test/src/main/res/layout/: fragment_test.xml
plugins_test/src/main/res/values/: strings.xml
plugins_test/src/test/java/com/ggg/plugins_test/: ExampleUnitTest.kt
share_remote/: build.gradle
share_remote/src/androidTest/java/com/ggg/share_remote/: ExampleInstrumentedTest.kt
share_remote/src/main/: AndroidManifest.xml
share_remote/src/main/java/com/ggg/share_remote/: ComposeShareRemoteActivity.kt  FolderItemAdapter.kt  RemoteBean.kt  RemoteRepository.kt  RemoteViewModel.kt  ShareRemoteActivity.kt  TitleItemAdapter.kt
share_remote/src/main/java/com/ggg/share_remote/declarativeui/: ComposeShareRemoteActivity.kt
share_remote/src/main/java/com/ggg/share_remote/imperativeui/: FolderItemAdapter.kt  ShareRemoteActivity.kt  TitleItemAdapter.kt
share_remote/src/main/res/drawable/: ic_excel.xml  ic_folder.xml  ic_pdf.xml  ic_picture.xml  ic_ppt.xml  ic_txt.xml  ic_video.xml  ic_word.xml
share_remote/src/main/res/layout/: item_folders.xml  item_folders_title.xml  layout_share_remote.xml  layout_tool_bar.xml
share_remote/src/main/res/values/: strings.xml  themes.xml
share_remote/src/test/java/com/ggg/share_remote/: ExampleUnitTest.kt
vsr/: build.gradle
vsr/src/androidTest/java/com/ggg/vsr/: ExampleInstrumentedTest.kt
vsr/src/main/: AndroidManifest.xml
vsr/src/main/cpp/: CMakeLists.txt  vsr.cpp
vsr/src/main/java/com/ggg/vsr/: NativeLib.kt
vsr/src/test/java/com/ggg/vsr/: ExampleUnitTest.kt
